--- a/css/styles.css
+++ b/css/styles.css
@@ -171,13 +171,23 @@ nav {
 
 /* Баннер с фоновым рисунком */
 .banner {
-    background: rgba(47, 48, 58, 0.8);    
+    background-image: url(/images/Header\ img.jpg);
+    background-color: rgba(47, 48, 58, 0.8);
+    background-blend-mode: multiply;
+    width: 1600px;
+    height: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    align-items: center;
     text-align: center;
 }
 
 .banner-text {
     margin-top: 0px;
     margin-bottom: 46px;
+    padding-top: 200px;
+    padding-left: 477px;
+    padding-right: 477px;
 
     color: var(--page-hero-text);    
 
