--- a/css/styles.css
+++ b/css/styles.css
@@ -171,7 +171,7 @@ nav {
 
 /* Баннер с фоновым рисунком */
 .banner {
-    background-image: url(/images/hero-banner.png);
+    background-image: url(../images/hero-banner.png);
     background-color: rgba(47, 48, 58, 0.8);
     background-blend-mode: multiply;
     width: 1600px;
